hopefully a fix for the weird no text wrap in tables on some devices bug..

--- a/src/routes/home/app.css
+++ b/src/routes/home/app.css
@@ -15,6 +15,9 @@
     padding: 6px 8px;
     position: relative;
     vertical-align: top;
+    word-break: break-word;
+    white-space: pre-line;
+    overflow-wrap: break-word;
 }
 
 .ProseMirror table th {
@@ -113,6 +116,9 @@ table th {
     padding: 6px 8px;
     position: relative;
     vertical-align: top;
+    word-break: break-word;
+    white-space: pre-line;
+    overflow-wrap: break-word;
 }
 
 table th {
